because we collected stuff

--- a/journal.tex
+++ b/journal.tex
@@ -1,10 +1,10 @@
-Author: Greco Gina, Marco Cecchini
+Author: Greco Gina, ( Marco Cecchini ), Giorgia Rauco
 Title: Thesis2
 
 Introduction: la la la
 Data
 Analisys
-Conclusion We have a sensor!
+Conclusion We have a sensor! Ma quale sensor.. we have an Higgs!
 
 
 References
